--- a/client/src/sass/_layout.sass
+++ b/client/src/sass/_layout.sass
@@ -1,5 +1,7 @@
 .hero
-  margin-bottom: 50px
+  margin-bottom: 20px
+  @media (min-width: $desktop-width)
+    margin-bottom: 50px
 
 .main-container
   display: flex
