--- a/client/src/sass/components/_About.sass
+++ b/client/src/sass/components/_About.sass
@@ -9,7 +9,7 @@
     display: flex
     flex-flow: row wrap
     justify-content: center
-    @media (min-width: 768px)
+    @media (min-width: $desktop-width)
       display: flex
 
   .team-thumbnail
@@ -18,7 +18,7 @@
     width: 125px
     max-width: 100%
 
-    @media (min-width: 768px)
+    @media (min-width: $desktop-width)
       flex: 1 1 0
       width: auto
 
