--- a/client/src/sass/components/_Header.sass
+++ b/client/src/sass/components/_Header.sass
@@ -2,6 +2,7 @@
   border-bottom: none
   margin: 0
   text-align: center
+  padding-bottom: 0
 
   h1
     margin: 15px auto 0
@@ -33,11 +34,11 @@
 
   .logo
     vertical-align: baseline
-    width: 200px
+    width: 120px
     display: block
     margin: 40px auto 0
 
-    @media (min-width: 768px)
+    @media (min-width: $desktop-width)
       width: 160px
       display: inline-block
       margin: 40px 0 0
