Add placeholder for beta/demo info

--- a/client/src/sass/components/_BetaInfo.sass
+++ b/client/src/sass/components/_BetaInfo.sass
@@ -1,10 +1,16 @@
-.corner-ribbon
+.beta-corner-ribbon
   position: absolute
   left: -140px
   top: 8px
   transform: rotate(-45deg)
-  background-color: #a71c1c
+  background-color: #a13604
   padding: 10px 150px
   box-shadow: 0 0 10px rgba(10, 10, 10, 0.25)
   color: white
   font-weight: bold
+
+.beta-banner
+  position: absolute
+  top: 20px
+  left: 50%
+  transform: translateX(-50%)
