Another refactor of requests form

--- a/client/src/sass/components/_Form.sass
+++ b/client/src/sass/components/_Form.sass
@@ -28,3 +28,8 @@ form
 
   .has-feedback label~.form-control-feedback
     top: 47px;
+
+  .help-block
+    position: absolute;
+    font-size: 1em
+    height: 20px
