--- a/client/src/sass/_layout.sass
+++ b/client/src/sass/_layout.sass
@@ -18,5 +18,6 @@
   max-width: 90%
   box-shadow: 2px 2px 6px rgba(10, 10, 10, 0.1)
   border-width: 2px
+  z-index: 10
   p
     line-height: 1.5em
