Refactor fulfillment form

--- a/client/src/sass/components/_Form.sass
+++ b/client/src/sass/components/_Form.sass
@@ -33,3 +33,10 @@ form
     position: absolute;
     font-size: 1em
     height: 20px
+
+  .dropoff-select
+    margin-bottom: 40px
+
+    .help-block
+      padding-left: 20px
+      transform: translateY(-10px)
