Remove Shower of Hope from template language

--- a/server/donations/templates/templated_email/donators/fulfillment_received.html
+++ b/server/donations/templates/templated_email/donators/fulfillment_received.html
@@ -23,7 +23,7 @@ Please keep any information confidential and don't post it anywhere online.
 
 If you can no longer make it, PLEASE EMAIL US AS SOON AS POSSIBLE: team@whatcanyouspare.org. Someone is counting on you.
 
-If the recipient does not come within 15 minutes, you can leave the item with The Shower of Hope staff, you can give it to another person receiving shower services or you can take it home with you and try to find another match.
+If the recipient does not come within 15 minutes, you can leave the item with a member of the Spare team (we will be on-site), you can give it to another person receiving services or you can take it home with you and try to find another match.
 
 Thank you,
 The Spare Team
@@ -61,7 +61,7 @@ Spare connects people in need with people who have spare stuff. Find us at whatc
 
   <p>If you can no longer make it, PLEASE EMAIL US AS SOON AS POSSIBLE: team@whatcanyouspare.org. Someone is counting on you.</p>
 
-  <p>If the recipient does not come within 15 minutes, you can leave the item with The Shower of Hope staff, you can give it to another person receiving shower services or you can take it home with you and try to find another match.</p>
+  <p>If the recipient does not come within 15 minutes, you can leave the item with a member of the Spare team (we will be on-site), you can give it to another person receiving services or you can take it home with you and try to find another match.</p>
 
   <p>Thank you,</p>
   <p>The Spare Team<br /><a href="mailto:team@whatcanyouspare.org">team@whatcanyouspare.org</a></p>
