Fix tile container width

--- a/client/src/sass/components/_Tile.sass
+++ b/client/src/sass/components/_Tile.sass
@@ -22,9 +22,12 @@
   position: relative
   box-sizing: border-box
   margin: 0 auto
+  border-radius: 10px
+  max-width: 100%
 
 .tile img
   border-radius: 10px
+  max-width: 100%
 
 .tile:hover img
   box-shadow: 0 0 10px rgba(10, 10, 10, 0.25)
