Add how it works

--- a/client/src/sass/components/_index.scss
+++ b/client/src/sass/components/_index.scss
@@ -1,11 +1,12 @@
-@import './_Donate';
-@import './_Header';
-@import './_Nav';
-@import './_Request';
-@import './_RequestConfirmation';
-@import './_Tile';
-@import './_Form';
-@import './_About';
-@import './_Footer';
-@import './_Table';
-@import './_BetaInfo';
+@import 'Donate';
+@import 'Header';
+@import 'Nav';
+@import 'Request';
+@import 'RequestConfirmation';
+@import 'Tile';
+@import 'Form';
+@import 'About';
+@import 'Footer';
+@import 'Table';
+@import 'BetaInfo';
+@import 'HowItWorks';
