--- a/client/src/sass/components/_Footer.sass
+++ b/client/src/sass/components/_Footer.sass
@@ -1,7 +1,18 @@
+.learn-more
+  text-align: center
+  font-size: 23px
+  margin-top: 20px
+  margin-bottom: 40px
+  line-height: 20px
+
+  @media (min-width: $desktop-width)
+    margin-bottom: 20px
+    margin-top: 60px
+
 .footer
   height: 60px
   line-height: 50px
-  margin-top: 30px
+  margin-top: 10px
   margin-bottom: 40px
   text-align: center
 
