Update About page and add Now serving text

--- a/client/src/sass/components/_Header.sass
+++ b/client/src/sass/components/_Header.sass
@@ -9,7 +9,7 @@
 
   a
     text-decoration: none
-    
+
   .breadcrumb
     text-transform: uppercase
     font-weight: bold
@@ -57,3 +57,13 @@
 
   .breadcrumb
     background: none
+
+  .notification
+    display: flex
+    flex-direction: row-reverse
+
+  .text
+    font-style: italic
+    font-size: 14px
+    color: #4f5464
+  
