Make dashed line under link solid

--- a/client/src/sass/components/_Footer.sass
+++ b/client/src/sass/components/_Footer.sass
@@ -23,9 +23,9 @@
 
     @media (min-width: $desktop-width)
       &.active
-        border-bottom: 3px dashed #4f5464
+        border-bottom: 2px solid #4f5464
       &:hover
-        border-bottom: 3px dashed lighten(#4f5464, 30%)
+        border-bottom: 2px solid lighten(#4f5464, 30%)
 
   ul
     list-style-type: none
