Clean up styles and markup

--- a/client/src/sass/components/_About.sass
+++ b/client/src/sass/components/_About.sass
@@ -2,9 +2,17 @@
   h2
     text-align: center
 
+  h3
+    font-weight: bold
+    font-size: 1.25em
+    margin-bottom: 1em
+
   p
     margin-bottom: 1.5em
-    line-height: 27px
+    line-height: 32px
+
+  .about-quote
+    font-style: italic
 
   .team-images
     display: flex
