Require TOS agreement

--- a/client/src/sass/components/_Form.sass
+++ b/client/src/sass/components/_Form.sass
@@ -40,3 +40,6 @@ form
     .help-block
       padding-left: 20px
       transform: translateY(-10px)
+
+  .disclaimer-group
+    margin-bottom: 60px
