Remove banner and adjust styles

--- a/client/src/sass/components/_Header.sass
+++ b/client/src/sass/components/_Header.sass
@@ -59,11 +59,9 @@
     background: none
 
   .notification
-    display: flex
-    flex-direction: row-reverse
+    position: relative
+    top: 18px
 
   .text
-    font-style: italic
     font-size: 14px
-    color: #4f5464
-  
+    color: #616161
