--- a/client/src/sass/components/_Request.sass
+++ b/client/src/sass/components/_Request.sass
@@ -4,6 +4,16 @@
   h2
     color: $request-primary-color
 
+  h3
+    font-size: 14px
+    font-weight: bold
+    letter-spacing: 2.54px
+    line-height: 13.5px
+    text-transform: uppercase
+    text-align: center
+    margin-top: 27px
+    margin-bottom: 27px
+
   form .btn
     color: white
     background: $request-primary-color
