--- a/client/src/sass/components/_Tile.sass
+++ b/client/src/sass/components/_Tile.sass
@@ -5,13 +5,23 @@
     text-decoration: none
 
 .tile
-  width: 112px
-  height: 112px
   position: relative
   box-sizing: border-box
   margin: 0 auto
   border-radius: 10px
   max-width: 100%
+
+.tile svg
+  border: 3px solid rgba(37, 54, 115, 0.2)
+  display: block
+  border-radius: 8px
+  width: 160px
+  height: 160px
+  padding: 27px
+  margin-left: auto
+  margin-right: auto
+  margin-bottom: 13.5px
+  margin-top: 13.5px
 
 .tile img
   border-radius: 10px
