Add a little more whitespace on the home page

--- a/client/src/sass/components/_Home.sass
+++ b/client/src/sass/components/_Home.sass
@@ -6,10 +6,21 @@
     margin-left: auto
     margin-right: auto
 
+  h2
+    margin-top: 72px
+
   ol
     list-style: none
-    margin-left: 0
     padding-left: 0
+    margin-left: auto
+    margin-right: auto
+    margin-bottom: 72px
+    max-width: 26em
+    li
+      list-style: none
+      padding-left: 0
+      margin-left: 0
+
 
   #announcement
     margin-bottom: 36px
