Front-end work to allow user to select tiles

--- a/client/src/sass/components/_Tile.sass
+++ b/client/src/sass/components/_Tile.sass
@@ -23,6 +23,12 @@
   margin-bottom: 13.5px
   margin-top: 13.5px
 
+.tile svg.selected
+  border: 3px solid rgba(37, 54, 115, 0.58)
+
+.tile svg:hover
+  border: 3px solid rgba(37, 54, 115, 0.58)
+
 .tile img
   border-radius: 10px
   max-width: 100%
