Make home page layout a little nicer on big screens

--- a/client/src/sass/_fonts.sass
+++ b/client/src/sass/_fonts.sass
@@ -19,7 +19,7 @@ h2
     +textedit(30px, 45px, 700)
 
 p, li
-  +textedit(18px, 20px, 400)
+  +textedit(20px, 1.25, 400)
 
 .text-label-small
   +textedit(1em, 1.25em, 400)
