--- a/client/src/sass/components/_Header.sass
+++ b/client/src/sass/components/_Header.sass
@@ -4,6 +4,9 @@
   text-align: center
   padding-bottom: 0
 
+  @media (min-width: $desktop-width)
+    text-align: left
+
   h1
     margin: 15px auto 0
 
