Change donate page to show all items at once

--- a/client/src/sass/components/_Donate.sass
+++ b/client/src/sass/components/_Donate.sass
@@ -1,6 +1,16 @@
 #donate-container
   h2
 
+  h3
+    font-size: 14px
+    font-weight: bold
+    letter-spacing: 2.54px
+    line-height: 13.5px
+    text-transform: uppercase
+    text-align: center
+    margin-top: 27px
+    margin-bottom: 27px
+
   form .btn
     color: white
     background: $donate-primary-color
