Make “Give an item” button blue on the home page

--- a/client/src/sass/components/_Nav.sass
+++ b/client/src/sass/components/_Nav.sass
@@ -36,6 +36,13 @@
       a:hover
         cursor: default
 
+    a.primary
+      border: 1px solid $donate-primary-color
+      background-color: $donate-primary-color
+      color: white
+      &:hover
+        background-color: $donate-primary-color
+
 
 =nav-styling($color)
   .nav-pills
